Both X-Ray and cavity enabled causes abnormal GPU load #81633

Closed
opened 2020-10-11 19:37:11 +02:00 by Ivan Smith · 9 comments

System Information
Operating system: macOS 10.15.7
Graphics card: AMD Radeon Pro 5500M 8 Gb / Intel UHD Graphics 630
Chrome: 86.0.4240.75

Blender Version
Broken: 2.90.0 (release)
Broken: 2.90.1 (release)

Short description of error

Enabling both cavity and XRay causes Google Chrome (at least) performance degrade drastically.

Video demo:
screenrec.mp4

Exact steps for others to reproduce the error

  • Open attached file or:
- Create new empty project
- Add two array modifiers to the default cube: item count 100, factor -1.2 for X and item count 100, factor 1.2 for Y axis
- Add bevel modifier with default settings
- Enable cavity with default settings
- Enable X-Ray with default settings
  • With Blender maximized (at least on windows) check the GPU usage - (this can be done through the task manager or browsing Google Chrome)

Note that disabling cavity before enabling X-Ray produces different result. In that case Chrome performs as usual.
angularvelocitybug.blend

**System Information** Operating system: macOS 10.15.7 Graphics card: AMD Radeon Pro 5500M 8 Gb / Intel UHD Graphics 630 Chrome: 86.0.4240.75 **Blender Version** Broken: 2.90.0 (release) Broken: 2.90.1 (release) **Short description of error** Enabling both cavity and XRay causes Google Chrome (at least) performance degrade drastically. Video demo: [screenrec.mp4](https://archive.blender.org/developer/F8979978/screenrec.mp4) **Exact steps for others to reproduce the error** - Open attached file or: ``` - Create new empty project - Add two array modifiers to the default cube: item count 100, factor -1.2 for X and item count 100, factor 1.2 for Y axis - Add bevel modifier with default settings - Enable cavity with default settings - Enable X-Ray with default settings ``` - With Blender maximized (at least on windows) check the GPU usage - (this can be done through the task manager or browsing Google Chrome) Note that disabling cavity before enabling X-Ray produces different result. In that case Chrome performs as usual. [angularvelocitybug.blend](https://archive.blender.org/developer/F8990193/angularvelocitybug.blend)
Author

Added subscriber: @IvanSmith

Added subscriber: @IvanSmith
Evan Wilson changed title from Both X-Ray and cavity enabled causes performance issues to Both X-Ray and cavity enabled causes Google Chrome performance issues 2020-10-12 03:11:11 +02:00

Added subscriber: @unwave

Added subscriber: @unwave

It is not a Google Chrome issue. Enabling both X-Ray and Cavity gives an abnormal constant 100% GPU load.
201012_180114_blender_Blender.png

It is not a Google Chrome issue. Enabling both X-Ray and Cavity gives an abnormal constant 100% GPU load. ![201012_180114_blender_Blender.png](https://archive.blender.org/developer/F8982841/201012_180114_blender_Blender.png)
Ivan Smith changed title from Both X-Ray and cavity enabled causes Google Chrome performance issues to Both X-Ray and cavity enabled causes abnormal GPU load 2020-10-13 15:39:57 +02:00

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm a high usage of the GPU in the task manager when both Cavity and X-Ray are enabled.
The Blender window needs to be maximized for this.
Here the file I used:
angularvelocitybug.blend

I can confirm a high usage of the GPU in the task manager when both Cavity and X-Ray are enabled. The Blender window needs to be maximized for this. Here the file I used: [angularvelocitybug.blend](https://archive.blender.org/developer/F8990193/angularvelocitybug.blend)

This issue was referenced by 89b5c9d433

This issue was referenced by 89b5c9d433793ba7f34ee9b9f3008cd0a4608374

This issue was referenced by adc0291061

This issue was referenced by adc02910618c38c956c499e496278768ea0e041f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-10-14 19:27:12 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81633
No description provided.