Fix T81633 Workbench: TAA never resolve when enabling both X-Ray and cavity

This was caused by a wrong flag equality check when in xray mode because
the xray mode was masking the effect option flags that are not supported
in this mode. This means the never passed and the TAA was reset before
every redraw, leading to infinite rendering.